--- a/style.css
+++ b/style.css
@@ -1,72 +1,48 @@
 *{
-    padding: 0px;
-    box-sizing: border-box;
-    margin: 0px;
     font-family: 'Roboto', sans-serif;
 }
-body h1{
-    position: absolute;
+.side{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.left{
+    margin-left: 5%;
+    background-repeat: no-repeat;
+}
+.left h1{
     width: 92px;
     height: 42px;
-    left: 41px;
-    top: 39px;
     font-style: normal;
     font-weight: normal;
     font-size: 36px;
     line-height: 42px;
-
     color: rgba(15, 52, 241, 0.83);
-
-
 }
-body div p{
-    position: absolute;
+.left p{
     width: 322px;
     height: 42px;
-    left: 44px;
-    top: 108px;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 21px;
-
     color: rgba(0, 0, 0, 0.53);
-
-
 }
-body div img{
-    position: absolute;
+.left img{
     width: 852px;
     height: 802px;
-    left: 0px;
-    top: 203px;
+    
 }
-
+.right{
+    margin-left: 10%;
+    margin-top: 20%;
+}
 .login{
-    position: absolute;
-    left: 866px;
-    top: 203px;
-    font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
 }
-.text h2{  
-    height: 28px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 28px;
-    padding-left: 5px;
-    color: rgba(0, 0, 0, 0.4);
-    font-family: 'Roboto', sans-serif;
-
-
-}
-.text h3{
-    height: 56px;
+.head h2{
     font-style: normal;
     font-weight: normal;
     font-size: 48px;
@@ -74,44 +50,52 @@ body div img{
     color: #000000;
     font-family: 'Roboto', sans-serif;
 }
-.text h4{
-    height: 21px; 
+.head h3{
+    margin-bottom: -35px;
+    margin-left: 5px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    color: rgba(0, 0, 0, 0.4);
+    font-family: 'Roboto', sans-serif;
+}
+.head h4{
+    margin-top: -30px;
+    margin-left: 5px;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 21px;
-    padding-top: 10px;
     color: rgba(0, 0, 0, 0.45);
     padding-left: 5px;
-
-
 }
-.text h4 a{
-    height: 21px; 
+.head h4 a{
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 21px;
     text-decoration: none;
-    color: rgba(15, 52, 241, 0.83);
+    color: rgb(64, 64, 209);
 
 }
-.text h4 a{
-    color: rgb(64, 64, 209);
+.form {
+    margin-top: 10%;
+    margin-left: 2%;
 }
+
 .form h2{
-    height: 21px;
-    padding-top: 50px;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 21px;
     color: #000000;
+    margin-top: 3vh;
 }
 .form input{
     width: 382px;
     height: 61px;
-    margin-top: 3vh;
+    margin-top: 0vh;
     border: 1px solid rgba(0, 0, 0, 0.7);
     box-sizing: border-box;
     border-radius: 11px;
@@ -153,14 +137,15 @@ body div img{
 
 .footer-text{
     margin-top: 8vh;
-    font-style: normal;
-    font-weight: normal;
+
     width: 300px;
     font-size: 12px;
     line-height: 13px;
     letter-spacing: 0.045em;
     color: rgba(0, 0, 0, 0.78);
     font-family: serif;
+    margin-bottom: 10%;
+    padding-left: 3%;
 }
 .footer-text a{
     text-decoration: none;
@@ -173,83 +158,77 @@ body div img{
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-@media screen and (max-width:523px) {
-    *{
-        padding: 10px;
-        margin-left: -30px;
-        font-family: 'Roboto', sans-serif;
+@media screen and (max-width:1689px) {
+    .left img{
+        width: 652px;
+        height: 602px;
     }
-    body{
-        background-image: url(img/photo_2022-02-19_21-16-32.jpg);
-        background-repeat: no-repeat;
+    .right{
+        margin-left: 0px;
     }
-    body div img{
-        width: 0;
-        height: 0;
+}
+@media screen and (max-width:1334px) {
+    .left img{
+        width: 452px;
+        height: 402px;
     }
-    body h1{
-        top: 39px;
-        left: 10vh;
+    .right{
+        margin-left: -10%;
     }
-    body div p{
-        left: 10vh;
-        font-size: 15px;
+}
+@media screen and (max-width:1102px) {
+    .side{
+        display: block;
+        grid-template-columns:none;
     }
-    .text h2{
-        font-size: 25px;
+    .right{
+        margin-top: 10%;
+        margin-left: 0%;
+        text-align: center;
     }
-    .text h3{
-        font-size: 35px;
-        margin-left: -40px;
+    .left img{
+        width:0%;
+        height:0%;
     }
-    .text h4{
-        font-size: 15px;
+    .footer-text{
+        text-align: center;
+        width: 100%;
+        padding-left: 0%;
     }
-    .text h4 a{
-        font-size: 15px;
-        margin-left: -5px;
+}
+
+@media screen and (max-width:562px) {
+    .head h2{
+        font-size: 30px;
     }
+    .head h3{
+        font-size: 16px;
+    }
+    .head h4{
+        margin-top: -30px;
+        margin-left: 5px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+    }
+    .head h4 a{
+        font-size: 10px;    
+    }
+    
     .form h2{
-        font-size: 20px;
+        font-size: 16px;
     }
     .form input{
-        width: 375px;
+        width: 300px;
         height: 50px;
     }
     .button1{
-        width: 375px;
+        width: 300px;
         height: 50px;
+    
     }
     .button2{
-        width: 375px;
+        width: 300px;
         height: 50px;
-    }
-    .login{
-        left: 20vh;
-    }
-    .icon{
-        width: 0px;
-        position: absolute;
-        top: 0px;
-        left: -100px;
-        padding: 0;
-    }
-    .icon2{
-        width: 0px;
-        position: absolute;
-        top: 0px;
-        left: -100px;
-        padding: 0;
-    }
-    .back{
-        margin-left: -10;
-    }
-    .footer-text{
-        font-size: 10px;
-        font-family: 'Roboto', sans-serif;
-    }
-    .footer-text a{
-        margin-left: -5px;
-        font-family: 'Roboto', sans-serif;
     }
 }
